--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.9.1",
     "fastify": "^4.26.1",
-    "vitest": "^1.2.2"
+    "fastify-plugin": "^4.5.1",
+    "vitest": "^1.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.5.4",
