--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.9.1",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
+    "fastify-type-provider-zod": "^1.1.9",
     "vitest": "^1.2.2",
     "zod": "^3.22.4"
   },
