--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.9.1",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
