--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "pino-pretty": "^10.3.1",
     "prisma": "^5.9.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
