--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@turf/turf": "^6.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.360.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
