--- a/server/package.json
+++ b/server/package.json
@@ -27,15 +27,18 @@
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.9.1",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.1.9",
+    "jsonwebtoken": "^9.0.2",
     "vitest": "^1.2.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^1.5.4",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.18",
     "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
