--- a/client/package.json
+++ b/client/package.json
@@ -22,17 +22,20 @@
     "clsx": "^2.1.0",
     "geojson": "^0.5.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.360.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.0.11",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/turf": "^3.5.32",
