--- a/package.json
+++ b/package.json
@@ -12,10 +12,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "dependencies": {
-    "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "react-i18next": "^14.1.0"
-  }
+  "author": ""
 }
