--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.22.3",
+    "romans": "^2.0.15",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
