--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.51.2",
     "react-i18next": "^14.1.0",
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.0.11",
