--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.360.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
@@ -38,6 +39,7 @@
     "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.22.3",
     "romans": "^2.0.15",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
