mobile drawer event list

--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,9 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
+    "usehooks-ts": "^3.1.0",
+    "uuid": "^9.0.1",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
